apps/vikunja/deployment-typesense.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: typesense
  name: typesense
  namespace: vikunja
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: vikunja
      app.kubernetes.io/name: typesense
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vikunja
        app.kubernetes.io/name: typesense
    spec:
      automountServiceAccountToken: true
      containers:
        - image: docker.io/typesense/typesense:0.25.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: typesense
          ports:
            - containerPort: 8108
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: typesense-data
