apps/vikunja/service-typesense.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: typesense
    app.kubernetes.io/service: typesense
  name: typesense
  namespace: vikunja
spec:
  ports:
    - name: http
      port: 8108
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: typesense
  type: ClusterIP
