apps/vikunja/service-vikunja.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/service: vikunja
  name: vikunja
  namespace: vikunja
spec:
  ports:
    - name: http
      port: 3456
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  type: ClusterIP
